finished beverages section structure

--- a/pages-industries/beverage-and-containers/tools-pneumatic/products/SLP-pneumatic-push-type-combination-tool-for-steel-strapping.html
+++ b/pages-industries/beverage-and-containers/tools-pneumatic/products/SLP-pneumatic-push-type-combination-tool-for-steel-strapping.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/grippack-sealer-114.html");
+				$("#page-content").load("/partial-pages-product-details/SLP-pneumatic-push-type-combination-tool-for-steel-strapping.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -50,14 +50,12 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../tools-battery.html">Tools - Battery</a></li>
-						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Grippack Sealer 114</b></a>
-						</li>
+						<li class="breadcrumb-item"><a href="../tools-pneumatic.html">Tools - Pneumatic</a></li>
+						<li class="breadcrumb-item active" aria-current="page"><a><b>SLP Pneumatic Push-type Combination Tool for Steel Strapping</b></a></li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Grippack Sealer 114</h2>
+				<h2 class="fw-normal lh-1 main-heading">SLP Pneumatic Push-type Combination Tool for Steel Strapping</h2>
 			</div>
 
 			<!-- divider -->
