--- a/pages-industries/beverage-and-containers/turntable-models/products/raptor-plus-semi-automatic-turntable-wrapping-machine.html
+++ b/pages-industries/beverage-and-containers/turntable-models/products/raptor-plus-semi-automatic-turntable-wrapping-machine.html
@@ -50,7 +50,7 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../angleboard.html">Turntable Models</a></li>
+						<li class="breadcrumb-item"><a href="../turntable-models.html">Turntable Models</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>Raptor Plus Semi Automatic Turntable Wrapping Machine</b></a>
 						</li>
