--- a/partial-pages-product-categories/dispensers-and-accessories.html
+++ b/partial-pages-product-categories/dispensers-and-accessories.html
@@ -101,7 +101,7 @@
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/filter"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/filter-regulator-lubricator-for-pneumatic-tools.html"><h5 class="card-title">Filter Regulator Lubricator For Pneumatic Tools</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -120,7 +120,7 @@
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/dispensers-for-steel-strapping.html"><h5 class="card-title">Dispensers for Steel Strapping</h5></a>
+									<a href="./products/tension-meter-for-plastic-and-steel-strapping.html"><h5 class="card-title">Tension Meter For Plastic and Steel Strapping</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
