--- a/partial-pages-product-categories/signode-strapping-machines.html
+++ b/partial-pages-product-categories/signode-strapping-machines.html
@@ -84,7 +84,7 @@
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><h5 class="card-title">MOD-GPX Semiautomatic Or Automatic Plastic Strapping Machine</h5></a>
+									<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><h5 class="card-title">MOD-GPX Semiautomatic or Automatic Plastic Strapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
