--- a/partial-pages-product-categories/tools-manual.html
+++ b/partial-pages-product-categories/tools-manual.html
@@ -42,11 +42,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/AST-manual-combination-tool-for-plastic-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><h5 class="card-title">BXT3-16 Handheld Battery Powered Strapping Tool</h5></a>
+									<a href="./products/AST-manual-combination-tool-for-plastic-strapping.html"><h5 class="card-title">AST Manual Combination Tool for Plastic Strapping</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,11 +61,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/manual-hand-tools-for-plastic-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6">
 								<div class="card-body">
-									<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><h5 class="card-title">BXT3-19 Battery Powered Combination Tool for Polyester Strapping</h5></a>
+									<a href="./products/manual-hand-tools-for-plastic-strapping.html"><h5 class="card-title">Manual Hand Tools For Plastic Strapping</h5></a>
 									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
 								</div>
 							</div>
@@ -73,19 +73,35 @@
 					</div>
 				</div>
 
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/manual-sealers-for-steel-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/manual-sealers-for-steel-strapping.html"><h5 class="card-title">Manual Sealers For Steel Strapping</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/grippack-sealer-114.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/manual-tensioners-for-steel-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
-							<div class="col-6 h-100">
+							<div class="col-6">
 								<div class="card-body">
-									<a href="./products/grippack-sealer-114.html"><h5 class="card-title">GripPack Sealer 114</h5></a>
-									<p class="card-text">
-										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
-									</p>
+									<a href="./products/manual-tensioners-for-steel-strapping.html"><h5 class="card-title">Manual Tensioners For Steel Strapping</h5></a>
+									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
 								</div>
 							</div>
 						</div>
