--- a/partial-pages-solutions/beverage-and-containers.html
+++ b/partial-pages-solutions/beverage-and-containers.html
@@ -61,7 +61,7 @@
 				  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm solutions-button h-100">
-					  <a href="./dunnage-bags/dunnage-bags.html"><a href=""><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="./dunnage-bags/dunnage-bags.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
 					  <h5> <a href="./dunnage-bags/dunnage-bags.html" class="gallery-text">Dunnage Bags</a></h5>
 					</div>
