--- a/pages-industries/beverage-and-containers/dispensers-and-accessories/products/filter-regulator-lubricator-for-pneumatic-tools.html
+++ b/pages-industries/beverage-and-containers/dispensers-and-accessories/products/filter-regulator-lubricator-for-pneumatic-tools.html
@@ -50,14 +50,14 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../angleboard.html">Angleboard</a></li>
+						<li class="breadcrumb-item"><a href="../dispensers-and-accessories.html">Dispensers and Accessories</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>AngleWrap</b></a>
+							<a><b>Filter Regulator Lubricator For Pneumatic Tools</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">AngleWrap</h2>
+				<h2 class="fw-normal lh-1 main-heading">Filter Regulator Lubricator For Pneumatic Tools</h2>
 			</div>
 
 			<!-- divider -->
