--- a/pages-industries/beverage-and-containers/tools-manual/products/AST-manual-combination-tool-for-plastic-strapping.html
+++ b/pages-industries/beverage-and-containers/tools-manual/products/AST-manual-combination-tool-for-plastic-strapping.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/grippack-sealer-114.html");
+				$("#page-content").load("/partial-pages-product-details/AST-manual-combination-tool-for-plastic-strapping.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -50,14 +50,14 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../tools-battery.html">Tools - Battery</a></li>
+						<li class="breadcrumb-item"><a href="../tools-manual.html">Tools - Manual</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Grippack Sealer 114</b></a>
+							<a><b>AST Manual Combination Tool for Plastic Strapping</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Grippack Sealer 114</h2>
+				<h2 class="fw-normal lh-1 main-heading">AST Manual Combination Tool for Plastic Strapping</h2>
 			</div>
 
 			<!-- divider -->
