--- a/pages-industries/beverage-and-containers/tools-pneumatic/products/VT-16-19-25HD-heavy-duty-pneumatic-tension-weld-combination-tools.html
+++ b/pages-industries/beverage-and-containers/tools-pneumatic/products/VT-16-19-25HD-heavy-duty-pneumatic-tension-weld-combination-tools.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/anglewrap.html");
+				$("#page-content").load("/partial-pages-product-details/VT-16-19-25HD-heavy-duty-pneumatic-tension-weld-combination-tools.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -50,14 +50,14 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../angleboard.html">Angleboard</a></li>
+						<li class="breadcrumb-item"><a href="../tools-pneumatic.html">Tools - Pneumatic</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>AngleWrap</b></a>
+							<a><b>VT-16/19/25HD Heavy Duty Pneumatic Tension-Weld Combination Tools</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">AngleWrap</h2>
+				<h2 class="fw-normal lh-1 main-heading">VT-16/19/25HD Heavy Duty Pneumatic Tension-Weld Combination Tools</h2>
 			</div>
 
 			<!-- divider -->
