--- a/pages-industries/beverage-and-containers/tools-pneumatic/tools-pneumatic.html
+++ b/pages-industries/beverage-and-containers/tools-pneumatic/tools-pneumatic.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/grippack-sealer-114.html");
+				$("#page-content").load("/partial-pages-product-categories/tools-pneumatic.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -49,15 +49,14 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../tools-battery.html">Tools - Battery</a></li>
+						<li class="breadcrumb-item"><a href="../beverage-and-containers.html">Beverage and Containers</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Grippack Sealer 114</b></a>
+							<a><b>Tools - Pneumatic</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Grippack Sealer 114</h2>
+				<h2 class="fw-normal lh-1 main-heading">Tools - Pneumatic</h2>
 			</div>
 
 			<!-- divider -->
