--- a/partial-pages-product-categories/tools-pneumatic.html
+++ b/partial-pages-product-categories/tools-pneumatic.html
@@ -42,11 +42,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/PNSC-2-pneumatic-push-type-combination-tool-for-steel-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/BXT3-16-handheld-battery-powered-strapping-tool.html"><h5 class="card-title">BXT3-16 Handheld Battery Powered Strapping Tool</h5></a>
+									<a href="./products/PNSC-2-pneumatic-push-type-combination-tool-for-steel-strapping.html"><h5 class="card-title">PNSC-2 Pneumatic Push-type Combination Tool for Steel Strapping</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -61,11 +61,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/SLP-pneumatic-push-type-combination-tool-for-steel-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6">
 								<div class="card-body">
-									<a href="./products/BXT3-19-battery-powered-combination-tool-for-polyester-strapping.html"><h5 class="card-title">BXT3-19 Battery Powered Combination Tool for Polyester Strapping</h5></a>
+									<a href="./products/SLP-pneumatic-push-type-combination-tool-for-steel-strapping.html"><h5 class="card-title">SLP Pneumatic Push-type Combination Tool for Steel Strapping</h5></a>
 									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
 								</div>
 							</div>
@@ -73,16 +73,15 @@
 					</div>
 				</div>
 
-				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/grippack-sealer-114.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/VFX-9-13-pneumatic-tension-weld-combination-tool.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/grippack-sealer-114.html"><h5 class="card-title">GripPack Sealer 114</h5></a>
+									<a href="./products/VFX-9-13-pneumatic-tension-weld-combination-tool.html"><h5 class="card-title">VFX 9-13 Pneumatic Tension-weld Combination Tool</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -92,6 +91,38 @@
 					</div>
 				</div>
 
+				<!-- product -->
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/VT-16-19-25HD-heavy-duty-pneumatic-tension-weld-combination-tools.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6">
+								<div class="card-body">
+									<a href="./products/VT-16-19-25HD-heavy-duty-pneumatic-tension-weld-combination-tools.html"><h5 class="card-title">VT-16/19/25HD Heavy Duty Pneumatic Tension-Weld Combination Tools</h5></a>
+									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/VT-brick-pneumatic-tension-weld-combination-tool-for-polyester-strapping.html"><img src="/images/partial-pages-product-categories/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6">
+								<div class="card-body">
+									<a href="./products/VT-brick-pneumatic-tension-weld-combination-tool-for-polyester-strapping.html"><h5 class="card-title">VT-Brick Pneumatic Tension-Weld Combination Tool for Polyester Strapping</h5></a>
+									<p class="card-text">Super strong Formaboard™ edge protection is lightweight, and water/moisture resistant. Ideal for transporting refrigerated/frozen foods.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
