--- a/partial-pages-product-details/VFX-9-13-pneumatic-tension-weld-combination-tool.html
+++ b/partial-pages-product-details/VFX-9-13-pneumatic-tension-weld-combination-tool.html
@@ -38,7 +38,8 @@
 					<div class="col-md-6 order-md-3">
 
 						<!-- heading -->
-						<h2 class="product-name">MOD GPX 2000 Semi Automatic Walk-Up Strapping Machine</h2>
+						<h2 class="product-name">VFX 9-13 Pneumatic Tension-weld Combination Tool
+						</h2>
 						<hr>
 						
 						<p class="lead text-content"><b>Product description:</b> Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
