--- a/partial-pages-product-details/tension-meter-for-plastic-and-steel-strapping.html
+++ b/partial-pages-product-details/tension-meter-for-plastic-and-steel-strapping.html
@@ -38,7 +38,7 @@
 					<div class="col-md-6 order-md-3">
 
 						<!-- heading -->
-						<h2 class="product-name">Cutters for Steel or Plastic Strapping</h2>
+						<h2 class="product-name">Tension Meter For Plastic and Steel Strapping</h2>
 						<hr>
 						
 						<p class="lead text-content"><b>Product description:</b> Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties.</p>
