finished product details partials, finished products pages

--- a/pages-industries/beverage-and-containers/signode-strapping-machines/products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html
+++ b/pages-industries/beverage-and-containers/signode-strapping-machines/products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html");
+				$("#page-content").load("/partial-pages-product-details/MOD-GPX-2000-semi-automatic-walk-up-strapping-machine.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -52,12 +52,12 @@
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
 						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>MOD GPX 2000 Semiautomatic Walk-Up Strapping Machine</b></a>
+							<a><b>MOD GPX 2000 Semi-automatic Walk-Up Strapping Machine</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">MOD GPX 2000 Semiautomatic Walk-Up Strapping Machine</h2>
+				<h2 class="fw-normal lh-1 main-heading">MOD GPX 2000 Semi-automatic Walk-Up Strapping Machine</h2>
 			</div>
 
 			<!-- divider -->
