--- a/pages-industries/beverage-and-containers/tools-manual/products/SCMH-sealless-combination-tool-for-magnus-steel-strapping.html
+++ b/pages-industries/beverage-and-containers/tools-manual/products/SCMH-sealless-combination-tool-for-magnus-steel-strapping.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html");
+				$("#page-content").load("/partial-pages-product-details/SCMH-sealless-combination-tool-for-magnus-steel-strapping.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -50,14 +50,14 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
+						<li class="breadcrumb-item"><a href="../tools-manual.html">Tools - Manual</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</b></a>
+							<a><b>SCMH Sealless Combination Tool for Magnus Steel Strapping</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</h2>
+				<h2 class="fw-normal lh-1 main-heading">SCMH Sealless Combination Tool for Magnus Steel Strapping</h2>
 			</div>
 
 			<!-- divider -->
