--- a/partial-pages-product-categories/dispensers-and-accessories.html
+++ b/partial-pages-product-categories/dispensers-and-accessories.html
@@ -38,6 +38,25 @@
 		<div class="container" id="products-section">
 			<div class="row">
 				<!-- product -->
+
+				<div class="col-12 col-lg-6 mb-4">
+					<div class="card mb-3 h-100">
+						<div class="row no-gutters h-100">
+							<div class="col-6">
+								<a href="./products/coil-lifter-for-steel-and-plastic-strapping.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+							</div>
+							<div class="col-6 h-100">
+								<div class="card-body">
+									<a href="./products/coil-lifter-for-steel-and-plastic-strapping.html"><h5 class="card-title">Coil Lifter for Steel and Plastic Strapping</h5></a>
+									<p class="card-text">
+										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
@@ -129,7 +148,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
