--- a/partial-pages-product-categories/signode-strapping-machines.html
+++ b/partial-pages-product-categories/signode-strapping-machines.html
@@ -61,11 +61,11 @@
 					<div class="card mb-3 h-100">
 						<div class="row no-gutters h-100">
 							<div class="col-6">
-								<a href="./products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
+								<a href="./products/MOD-GPX-2000-semi-automatic-walk-up-strapping-machine.html"><img src="/images/partial-pages-product-details/placeholder.jpg" class="card-img" alt="..." /></a>
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/MOD-GPX-2000-semiautomatic-walk-up-strapping-machine.html"><h5 class="card-title">MOD-GPX 2000 Semiautomatic Walk-Up Strapping Machine</h5></a>
+									<a href="./products/MOD-GPX-2000-semi-automatic-walk-up-strapping-machine.html"><h5 class="card-title">MOD-GPX 2000 Semi-automatic Walk-Up Strapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -84,7 +84,7 @@
 							</div>
 							<div class="col-6 h-100">
 								<div class="card-body">
-									<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><h5 class="card-title">MOD-GPX Semiautomatic or Automatic Plastic Strapping Machine</h5></a>
+									<a href="./products/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html"><h5 class="card-title">MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</h5></a>
 									<p class="card-text">
 										Cornerboard edge protection is a high-strength, moisture-resistant corner protector made of recycled paper and plastic. Ideal for products exposed to the elements and shipped on flat bed trucks, stored outdoors, or exposed to high humidity.
 									</p>
@@ -93,7 +93,6 @@
 						</div>
 					</div>
 				</div>
-
 
 				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
@@ -133,7 +132,6 @@
 					</div>
 				</div>
 
-
 				<!-- product -->
 				<div class="col-12 col-lg-6 mb-4">
 					<div class="card mb-3 h-100">
@@ -152,7 +150,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
