--- a/pages-industries/beverage-and-containers/signode-strapping-machines/products/SMB-CROSS-the-fully-automatic-cross-strapping-line.html
+++ b/pages-industries/beverage-and-containers/signode-strapping-machines/products/SMB-CROSS-the-fully-automatic-cross-strapping-line.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html");
+				$("#page-content").load("/partial-pages-product-details/SMB-CROSS-the-fully-automatic-cross-strapping-line.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -52,12 +52,12 @@
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
 						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</b></a>
+							<a><b>SMB CROSS-the Fully Automatic Cross-Strapping-Line</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</h2>
+				<h2 class="fw-normal lh-1 main-heading">SMB CROSS-the Fully Automatic Cross-Strapping-Line</h2>
 			</div>
 
 			<!-- divider -->
