--- a/pages-industries/beverage-and-containers/strapex-strapping-machines/products/MOD-GPX-semiautomatic-or-automatic-plastic-strapping-machine.html
+++ b/pages-industries/beverage-and-containers/strapex-strapping-machines/products/MOD-GPX-semiautomatic-or-automatic-plastic-strapping-machine.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/MOD-GPX-semi-or-automatic-plastic-strapping-machine.html");
+				$("#page-content").load("/partial-pages-product-details/MOD-GPX-semiautomatic-or-automatic-plastic-strapping-machine.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -50,7 +50,7 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../beverage-and-containers.html">Beverage and Containers</a></li>
-						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
+						<li class="breadcrumb-item"><a href="../strapex-strapping-machines.html">Strapex Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>MOD-GPX Semi-automatic or Automatic Plastic Strapping Machine</b></a>
 						</li>
