--- a/pages-industries/lumber-and-panelboard/steel-strapping/products/magnus-steel-strapping-for-heavy-duty-applications.html
+++ b/pages-industries/lumber-and-panelboard/steel-strapping/products/magnus-steel-strapping-for-heavy-duty-applications.html
@@ -50,7 +50,7 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 						<li class="breadcrumb-item"><a href="../../lumber-and-panelboard.html">Lumber and Panelboard</a></li>
-						<li class="breadcrumb-item"><a href="../steel-strapping-machines.html">Steel Strapping Machines</a></li>
+						<li class="breadcrumb-item"><a href="../steel-strapping.html">Steel Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>Magnus Steel Strapping for Heavy Duty Applications</b></a>
 						</li>
