--- a/pages-products/stretch-equipment-and-film/rotary-arm-models/products/cobra-G-semi-automatic-wrapping-machine.html
+++ b/pages-products/stretch-equipment-and-film/rotary-arm-models/products/cobra-G-semi-automatic-wrapping-machine.html
@@ -50,7 +50,7 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/products.html">Products</a></li>
 						<li class="breadcrumb-item"><a href="../../stretch-equipment-and-film.html">Stretch Equipment and Film</a></li>
-						<li class="breadcrumb-item"><a href="../plastic-strapping.html">Plastic Strapping</a></li>
+						<li class="breadcrumb-item"><a href="../rotary-arm-models.html">Rotary Arm Models</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>Cobra G Semi-automatic Wrapping Machine</b></a>
 						</li>
