--- a/pages-industries/lumber-and-panelboard/signode-strapping-machines/products/Z-20-modular-strapping-system-for-lumber-and-panel-strapping-machines.html
+++ b/pages-industries/lumber-and-panelboard/signode-strapping-machines/products/Z-20-modular-strapping-system-for-lumber-and-panel-strapping-machines.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/eliminator-stretch-film-line.html");
+				$("#page-content").load("/partial-pages-product-details/Z-20-modular-strapping-system-for-lumber-and-panel-strapping-machines.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -49,15 +49,15 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-						<li class="breadcrumb-item"><a href="../../stretch-film-equipment.html">Stretch Film Equipment</a></li>
-						<li class="breadcrumb-item"><a href="../stretch-film-equipment.html">Stretch Film Equipment</a></li>
+						<li class="breadcrumb-item"><a href="../../lumber-and-panelboard.html">Lumber and Panelboard</a></li>
+						<li class="breadcrumb-item"><a href="../signode-strapping-machines.html">Signode Strapping Machines</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Eliminator Stretch Film Line</b></a>
+							<a><b>Z-20 Modular Strapping System For Lumber and Panel Strapping Machines</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Eliminator Stretch Film Line</h2>
+				<h2 class="fw-normal lh-1 main-heading">Z-20 Modular Strapping System For Lumber and Panel Strapping Machines</h2>
 			</div>
 
 			<!-- divider -->
