--- a/pages-products/damage-prevention-products/turntable-models/products/GW-1200-semi-automatic-turntable-wrapping-machine.html
+++ b/pages-products/damage-prevention-products/turntable-models/products/GW-1200-semi-automatic-turntable-wrapping-machine.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/eliminator-stretch-film-line.html");
+				$("#page-content").load("/partial-pages-product-details/GW-1200-semi-automatic-turntable-wrapping-machine.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -48,16 +48,16 @@
 				<!-- BREADCRUMB -->
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-						<li class="breadcrumb-item"><a href="../../stretch-film-equipment.html">Stretch Film Equipment</a></li>
-						<li class="breadcrumb-item"><a href="../stretch-film-equipment.html">Stretch Film Equipment</a></li>
+						<li class="breadcrumb-item"><a href="/products.html">Products</a></li>
+						<li class="breadcrumb-item"><a href="../../damage-prevention-products.html">Damage Prevention Products</a></li>
+						<li class="breadcrumb-item"><a href="../tools-pneumatic.html">Tools - Pneumatic</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Eliminator Stretch Film Line</b></a>
+							<a><b>GW-1200 Semi-Automatic Turntable Wrapping Machine</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Eliminator Stretch Film Line</h2>
+				<h2 class="fw-normal lh-1 main-heading">GW-1200 Semi-Automatic Turntable Wrapping Machine</h2>
 			</div>
 
 			<!-- divider -->
