--- a/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/cobra-1525A-rotary-arm-automatic-stretch-wrapping-machine.html
+++ b/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/cobra-1525A-rotary-arm-automatic-stretch-wrapping-machine.html
@@ -24,7 +24,7 @@
 			$(function () {
 				$("#navbar-one").load("/partials/navbar-one.html");
 				$("#navbar-two").load("/partials/navbar-two.html");
-				$("#page-content").load("/partial-pages-product-details/eliminator-stretch-film-line.html");
+				$("#page-content").load("/partial-pages-product-details/cobra-1525A-rotary-arm-automatic-stretch-wrapping-machine.html");
 				$("#footer").load("/partials/footer.html");
 			});
 		</script>
@@ -52,12 +52,12 @@
 						<li class="breadcrumb-item"><a href="../../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item"><a href="../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
-							<a><b>Eliminator Stretch Film Line</b></a>
+							<a><b>Cobra 1525A Rotary Arm Automatic Stretch Wrapping Machine</b></a>
 						</li>
 					</ol>
 				</nav>
 
-				<h2 class="fw-normal lh-1 main-heading">Eliminator Stretch Film Line</h2>
+				<h2 class="fw-normal lh-1 main-heading">Cobra 1525A Rotary Arm Automatic Stretch Wrapping Machine</h2>
 			</div>
 
 			<!-- divider -->
