--- a/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/galewrap-leverage-oriented-film.html
+++ b/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/galewrap-leverage-oriented-film.html
@@ -48,8 +48,8 @@
 				<!-- BREADCRUMB -->
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/products.html">Products</a></li>
-						<li class="breadcrumb-item"><a href="../../stretch-equipment-and-film.html">Stretch Equipment and Film</a></li>
+						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
+						<li class="breadcrumb-item"><a href="../../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item"><a href="../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>Galewrap Leverage Oriented Film</b></a>
