added services page

--- a/pages-products/steel-strapping-systems/steel-strapping-systems.html
+++ b/pages-products/steel-strapping-systems/steel-strapping-systems.html
@@ -48,7 +48,7 @@
 				<!-- BREADCRUMB -->
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/industries.html">Products</a></li>
+						<li class="breadcrumb-item"><a href="/products.html">Products</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
 							<a><b>Steel Strapping Systems</b></a>
 						</li>
