--- a/pages-solutions/automation.html
+++ b/pages-solutions/automation.html
@@ -12,25 +12,25 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-automation-page.css" />
-		<link rel="stylesheet" href="venobox/dist/venobox.min.css" />
+		<link rel="stylesheet" href="/css/styles-automation-page.css" />
+		<link rel="stylesheet" href="/venobox/dist/venobox.min.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 		<!-- lightbox -->
-		<link rel="stylesheet" href="node_modules/lightbox2/dist/css/lightbox.min.css">
+		<link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.min.css">
     
 		<!-- venobox -->
-		<link rel="stylesheet" href="node_modules/venobox/dist/venobox.min.css" />
+		<link rel="stylesheet" href="/node_modules/venobox/dist/venobox.min.css" />
 
         <title>Signode Canada</title>
 
         <script>
             $(function(){
-                $('#navbar-one').load('partials/navbar-one.html');
-                $('#navbar-two').load('partials/navbar-two.html');
-                $('#footer').load('partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -78,7 +78,7 @@
 
                 <!-- image -->
                 <div class="col-md-5 order-md-3">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="images/automation-page/automation.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="/images/automation-page/automation.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
 							<!-- video -->
 							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
 								<!-- placeholder image -->
-								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+								<img src="/images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
 
 								<!-- play icon -->
 								<i class="fa-regular fa-circle-play play-button"></i>
@@ -178,7 +178,7 @@
 							<!-- video -->
 							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
 								<!-- placeholder image -->
-								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+								<img src="/images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
 
 								<!-- play icon -->
 								<i class="fa-regular fa-circle-play play-button"></i>
@@ -198,7 +198,7 @@
 							<!-- video -->
 							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
 								<!-- placeholder image -->
-								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+								<img src="/images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
 
 								<!-- play icon -->
 								<i class="fa-regular fa-circle-play play-button"></i>
@@ -218,7 +218,7 @@
 							<!-- video -->
 							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
 								<!-- placeholder image -->
-								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+								<img src="/images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
 
 								<!-- play icon -->
 								<i class="fa-regular fa-circle-play play-button"></i>
@@ -271,7 +271,7 @@
 			<!-- SERVICE -->
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-1 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-2 service-text">
@@ -290,7 +290,7 @@
 			<!-- SERVICE -->
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-2 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-1 service-text">
@@ -309,7 +309,7 @@
 			<!-- SERVICE -->
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-1 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-2 service-text">
@@ -328,7 +328,7 @@
 			<!-- SERVICE -->
 			<div class="row">
 				<div class="col-12 col-lg-6 order-lg-2 service-image ">
-					<img src="images/services-page/service.png" alt="" class="w-100 h-100">
+					<img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 				</div>
   
 				<div class="col-12 col-lg-6 order-lg-1 service-text">
@@ -360,10 +360,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 		<!-- Lightbox js -->
-		<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+		<script src="/node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 
 		<!-- Venobox js -->
-		<script src="node_modules/venobox/dist/venobox.min.js"></script>
+		<script src="/node_modules/venobox/dist/venobox.min.js"></script>
 	
 		<!-- Venobox script -->
 		<script>
