--- a/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/cobra-G-semi-automatic-wrapping-machine.html
+++ b/pages-products/stretch-equipment-and-film/stretch-film-equipment/products/cobra-G-semi-automatic-wrapping-machine.html
@@ -48,7 +48,7 @@
 				<!-- BREADCRUMB -->
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
+						<li class="breadcrumb-item"><a href="/products.html">Products</a></li>
 						<li class="breadcrumb-item"><a href="../../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item"><a href="../stretch-film-equipment.html">Stretch Film Equipment</a></li>
 						<li class="breadcrumb-item active" aria-current="page">
