--- a/partial-pages-product-details/AST-manual-combination-tool-for-plastic-strapping.html
+++ b/partial-pages-product-details/AST-manual-combination-tool-for-plastic-strapping.html
@@ -27,8 +27,18 @@
     <body>
 	
 		<div class="container">
+
+			<!-- COME BACK TO THIS -->
+			<!-- couldn't find product -->
 		
 			<!-- ******************************* PRODUCT IMAGE AND DESCRIPTION ************************************** -->
+
+			<!-- description -->
+			<p class="description">
+				With a portfolio of protective products that minimize moisture and corrosion damage, dunnage products that ease storage and handling, and strapping solutions that secure heavy loads for transit, Signode has a full line of packaging products and equipment designed specifically for all
+				types of mills and metal service center industry applications.
+			</p>
+			<br><br>
 
 			<div class="marketing">
 
@@ -103,30 +113,43 @@
 			<div>
 				<h2 class="heading">Technical specifications</h2>
 
-				<table class="table table-bordered">
+				<table class="table table-bordered text-center">
+					<!-- header rows -->
 					<thead class="thead-dark">
-					<tr>
-						<th>First</th>
-						<th>Last</th>
-						<th>Handle</th>
-					</tr>
+						<tr>
+							<th>Specification</th>
+							<th>Angleboard</th>
+							<th>Anglewrap</th>
+						</tr>
 					</thead>
+
+					<!-- body rows -->
 					<tbody>
-					<tr>
-						<td>Mark</td>
-						<!-- takes up two rows -->
-						<td rowspan="2">Otto</td>
-						<td>@mdo</td>
-					</tr>
-					<tr>
-						<td>Jacob</td>
-						<td>@fat</td>
-					</tr>
-					<tr>
-						<td>Larry the Bird</td>
-						<!-- takes up to columns -->
-						<td colspan="2">@twitter</td>
-					</tr>
+
+						<tr>
+							<td>A: Leg Length One</td>
+							<td>63.5 mm (1.5 - 2.5 in.)</td>
+							<td>101.6 mm (1.5 - 4 in.)</td>
+						</tr>
+
+						<tr>
+							<td>B: Leg Length Two</td>
+							<td>63.5 mm (1.5 - 2.5 in.)</td>
+							<td>101.6 mm (1.5 - 4 in.)</td>
+						</tr>
+
+						<tr>
+							<td>C: Caliper</td>
+							<td>6.4 mm (.120 - .250 in.)</td>
+							<td>12.7 mm (.060 - .500 in.)</td>
+						</tr>
+
+						<tr>
+							<td>D: Length</td>
+							<td>6096 mm (2 - 240 in.)</td>
+							<td>6096 mm (2.5 - 240 in.)</td>
+						</tr>
+						
 					</tbody>
 				</table>
 				
