--- a/partial-pages-product-details/apex-plus-steel-strapping.html
+++ b/partial-pages-product-details/apex-plus-steel-strapping.html
@@ -136,7 +136,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2><br>
+				<h2 class="heading">Technical Specifications</h2><br>
 
 				<h5>Apex (Regular Duty) Strapping </h5>
 
