--- a/partial-pages-product-details/dispensers-for-steel-strapping.html
+++ b/partial-pages-product-details/dispensers-for-steel-strapping.html
@@ -27,7 +27,10 @@
     <body>
 	
 		<div class="container">
-		
+			
+			<!-- COME BACK TO THIS -->
+			<!-- couldn't find product -->
+
 			<!-- ******************************* PRODUCT IMAGE AND DESCRIPTION ************************************** -->
 
 			<!-- description -->
@@ -108,7 +111,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
