--- a/partial-pages-product-details/tenax-high-strength-polyester-strapping.html
+++ b/partial-pages-product-details/tenax-high-strength-polyester-strapping.html
@@ -63,39 +63,37 @@
 				
 			</div>
 		
-			<!-- ******************************* FEATURES ************************************** -->
+			<!-- ******************************* HIGHLIGHTS ************************************** -->
 
-			<div class="features">
-				<h2 class="heading">Features</h2>
-				<hr>
+			<div class="highlights">
+				<h2 class="heading">Highlights</h2>
 				<ul>
 					<!-- feature -->
 					<li>
-						<b>Maximum versatility</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<b>Highly Sustainable</b>
+						<p>Manufactured using post-consumer polyester material and can be recycled after use.</p>
 					</li>
 
 					<!-- feature -->
 					<li>
-						<b>Durable construction</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<b>Unparalleled Performance</b>
+						<p>Manufactured with a proprietary process to reduce splitting for superior retained tension.</p>
 					</li>
 
 					<!-- feature -->
 					<li>
-						<b>Enhances load stability</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<b>Maximum Versatility</b>
+						<p>Yields high break strengths making it ideal for countless packaging applications.</p>
 					</li>
 
 					<!-- feature -->
 					<li>
-						<b>Enhances load stability</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<b>Operating Efficiency</b>
+						<p>Controlled surface properties minimize tensioning effort to extend tool and machine life.</p>
 					</li>
 				</ul>
 			</div>
-			<br><br><br><br>
-
+			<br><br>
 
 			<!-- ******************************* SOLUTIONS GROUP ************************************** -->
 			<div>
@@ -108,43 +106,115 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
 					<thead class="thead-dark">
 						<tr>
-							<th>Specification</th>
-							<th>Angleboard</th>
-							<th>Anglewrap</th>
+							<th class="align-middle" rowspan="3">Type</th>
+							<th class="align-middle" colspan="4">Strap Size</th>
+							<th class="align-middle" rowspan="2" colspan="2">Strength</th>
+							<th class="align-middle" colspan="6">Coil Size</th>
+						</tr>
+						<tr>
+							<th class="align-middle" colspan="2">Width</th>
+							<th class="align-middle" colspan="2">Gauge</th>
+							<th class="align-middle" colspan="2">Width</th>
+							<th class="align-middle" colspan="2">Width</th>
+							<th class="align-middle" colspan="2">Width</th>
+						</tr>
+						<tr>
+							<th>mm</th>
+							<th>inch</th>
+							<th>mm</th>
+							<th>inch</th>
+							<th>N</th>
+							<th>lbs</th>
+							<th>m</th>
+							<th>ft</th>
+							<th>m</th>
+							<th>ft</th>
+							<th>m</th>
+							<th>ft</th>
 						</tr>
 					</thead>
 
 					<!-- body rows -->
 					<tbody>
-
 						<tr>
-							<td>A: Leg Length One</td>
-							<td>63.5 mm (1.5 - 2.5 in.)</td>
-							<td>101.6 mm (1.5 - 4 in.)</td>
+							<td>2030</td>
+							<td>15.6</td>
+							<td>5/8</td>
+							<td>0.76</td>
+							<td>0.030</td>
+							<td>4900</td>
+							<td>1,100</td>
+							<td>1403</td>
+							<td>4,600</td>
+							<td>4400</td>
+							<td>14,435</td>
+							<td>7010</td>
+							<td>23,000</td>
 						</tr>
-
 						<tr>
-							<td>B: Leg Length Two</td>
-							<td>63.5 mm (1.5 - 2.5 in.)</td>
-							<td>101.6 mm (1.5 - 4 in.)</td>
+							<td>2040</td>
+							<td>15.6</td>
+							<td>5/8</td>
+							<td>0.89</td>
+							<td>0.035</td>
+							<td>6227</td>
+							<td>1,400</td>
+							<td>1219</td>
+							<td>4,000</td>
+							<td>4,400</td>
+							<td>14,435</td>
+							<td>7010</td>
+							<td>23,000</td>
 						</tr>
-
 						<tr>
-							<td>C: Caliper</td>
-							<td>6.4 mm (.120 - .250 in.)</td>
-							<td>12.7 mm (.060 - .500 in.)</td>
+							<td>1718</td>
+							<td>10.5</td>
+							<td>7/16</td>
+							<td>0.56</td>
+							<td>0.022</td>
+							<td>2450</td>
+							<td>550</td>
+							<td>3018</td>
+							<td>9,900</td>
 						</tr>
-
 						<tr>
-							<td>D: Length</td>
-							<td>6096 mm (2 - 240 in.)</td>
-							<td>6096 mm (2.5 - 240 in.)</td>
+							<td>1816</td>
+							<td>12</td>
+							<td>1/2</td>
+							<td>0.44</td>
+							<td>0.0175</td>
+							<td>2220</td>
+							<td>500</td>
+							<td>3200</td>
+							<td>10,500</td>
+						</tr>
+						<tr>
+							<td>1818</td>
+							<td>12</td>
+							<td>1/2</td>
+							<td>0.52</td>
+							<td>0.0205</td>
+							<td>2670</td>
+							<td>600</td>
+							<td>2743</td>
+							<td>9,000</td>
+						</tr>
+						<tr>
+							<td>1822</td>
+							<td>12</td>
+							<td>1/2</td>
+							<td>0.71</td>
+							<td>0.028</td>
+							<td>3560</td>
+							<td>800</td>
+							<td>1981</td>
+							<td>6,500</td>
 						</tr>
 						
 					</tbody>
