--- a/partial-pages-product-details/GW-1200-semi-automatic-turntable-wrapping-machine.html
+++ b/partial-pages-product-details/GW-1200-semi-automatic-turntable-wrapping-machine.html
@@ -108,7 +108,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
