--- a/partial-pages-product-details/PN2-114-pneumatic-tensioner-for-steel-strapping.html
+++ b/partial-pages-product-details/PN2-114-pneumatic-tensioner-for-steel-strapping.html
@@ -133,7 +133,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<thead class="thead-dark">
