--- a/partial-pages-product-details/SMB-CROSS-the-fully-automatic-cross-strapping-line.html
+++ b/partial-pages-product-details/SMB-CROSS-the-fully-automatic-cross-strapping-line.html
@@ -63,39 +63,28 @@
 				
 			</div>
 		
-			<!-- ******************************* FEATURES ************************************** -->
+			<!-- ******************************* HIGHLIGHTS ************************************** -->
 
-			<div class="features">
-				<h2 class="heading">Features</h2>
-				<hr>
+			<div class="highlights">
+				<h2 class="heading">Highlights</h2>
 				<ul>
 					<!-- feature -->
 					<li>
-						<b>Maximum versatility</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<p>Very good accessibility.</p>
 					</li>
 
 					<!-- feature -->
 					<li>
-						<b>Durable construction</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<p>Low maintenance.</p>
 					</li>
 
 					<!-- feature -->
 					<li>
-						<b>Enhances load stability</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
-					</li>
-
-					<!-- feature -->
-					<li>
-						<b>Enhances load stability</b>
-						<p>From produce to printing, APXboard laminated paper packaging is a cost-effective solution for unitization and edge protection applications.</p>
+						<p>Highest availability.</p>
 					</li>
 				</ul>
 			</div>
-			<br><br><br><br>
-
+			<br><br>
 
 			<!-- ******************************* SOLUTIONS GROUP ************************************** -->
 			<div>
@@ -108,15 +97,18 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
 					<thead class="thead-dark">
 						<tr>
-							<th>Specification</th>
-							<th>Angleboard</th>
-							<th>Anglewrap</th>
+							<th>Model</th>
+							<th>Cross strapping packs/minute</th>
+							<th>At table belt speed in m/s</th>
+							<th>Based on package size, L x W in mm</th>
+							<th>Transport speed in m/s</th>
+							<th>Weight in kg</th>
 						</tr>
 					</thead>
 
@@ -124,27 +116,16 @@
 					<tbody>
 
 						<tr>
-							<td>A: Leg Length One</td>
-							<td>63.5 mm (1.5 - 2.5 in.)</td>
-							<td>101.6 mm (1.5 - 4 in.)</td>
-						</tr>
+							<td>Cross</td>
+							<td>36</td>
+							<td>1</td>
+							<td>300x210</td>
+							<td>0.20 - 1.00</td>
+							<td>900</td>
 
-						<tr>
-							<td>B: Leg Length Two</td>
-							<td>63.5 mm (1.5 - 2.5 in.)</td>
-							<td>101.6 mm (1.5 - 4 in.)</td>
-						</tr>
 
-						<tr>
-							<td>C: Caliper</td>
-							<td>6.4 mm (.120 - .250 in.)</td>
-							<td>12.7 mm (.060 - .500 in.)</td>
-						</tr>
 
-						<tr>
-							<td>D: Length</td>
-							<td>6096 mm (2 - 240 in.)</td>
-							<td>6096 mm (2.5 - 240 in.)</td>
+
 						</tr>
 						
 					</tbody>
