--- a/partial-pages-product-details/VFX-9-13-pneumatic-tension-weld-combination-tool.html
+++ b/partial-pages-product-details/VFX-9-13-pneumatic-tension-weld-combination-tool.html
@@ -109,7 +109,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
