--- a/partial-pages-product-details/Z-20-modular-strapping-system-for-lumber-and-panel-strapping-machines.html
+++ b/partial-pages-product-details/Z-20-modular-strapping-system-for-lumber-and-panel-strapping-machines.html
@@ -108,7 +108,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
