--- a/partial-pages-product-details/anglewrap.html
+++ b/partial-pages-product-details/anglewrap.html
@@ -113,7 +113,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
