--- a/partial-pages-product-details/coil-lifter-for-steel-and-plastic-strapping.html
+++ b/partial-pages-product-details/coil-lifter-for-steel-and-plastic-strapping.html
@@ -27,6 +27,9 @@
     <body>
 	
 		<div class="container">
+			
+			<!-- COME BACK TO THIS -->
+			<!-- couldn't find product -->
 		
 			<!-- ******************************* PRODUCT IMAGE AND DESCRIPTION ************************************** -->
 
@@ -108,7 +111,7 @@
 
 			<!-- ******************************* TECHNICAL SPECIFICATIONS ************************************** -->
 			<div>
-				<h2 class="heading">Technical specifications</h2>
+				<h2 class="heading">Technical Specifications</h2>
 
 				<table class="table table-bordered text-center">
 					<!-- header rows -->
